ghc/tests/typecheck/should_compile/tc073.hs

module ShouldSucc where

f [] = []
f (x:xs) = x : (f xs)
