ghc/tests/typecheck/should_fail/tcfail009.hs
module ShouldFail where

p = [(1::Int)..(2::Integer)]
